# fintech_hw8_coursework_edu_api

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
app/: app.py  cli.py  logger.py
app/api/: api.py  deps.py
app/api/admin/: admin.py
app/api/auth/: auth.py
app/api/courses/: courses.py  modules.py
app/api/profile/: courses.py  profile.py  solutions.py
app/core/: .env  security.py  settings.py
app/crud/: crud_base.py  crud_course.py  crud_course_user.py  crud_module.py  crud_solution.py  crud_user.py
app/database/: db.py  utils.py
app/models/: course.py  course_user.py  message.py  module.py  solution.py  user.py
app/schemas/: course.py  module.py  solution.py  token.py  user.py
docker/app/: Dockerfile
tests/app/: conftest.py
tests/app/api/: conftest.py
tests/app/api/admin/: test_admin.py
tests/app/api/auth/: test_login.py  test_register.py  test_token.py
tests/app/api/auth.py/: test_login.py  test_register.py  test_token.py
tests/app/api/courses/: test_courses.py  test_modules.py
tests/app/api/profile/: test_profile_courses.py  test_profile_solutions.py
